k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datetime-app-service
  labels:
    app: datetime-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: datetime-app
